card stack image wrapping issue solved

--- a/Components/CardStacking/Card.module.css
+++ b/Components/CardStacking/Card.module.css
@@ -95,6 +95,5 @@
 
 .cardImg {
   height: 100%;
-  width: 100%;
   border-radius: 1.15rem;
 }
